# libzynayumi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ayumi-lib/: README.md  ayumi.c  ayumi.doxygen_config  ayumi.h
cmake-modules/: FindLVTK.cmake
src/: CMakeLists.txt  dssizynayumi.cpp  dssizynayumi.hpp  parameters.hpp  vstzynayumi.cpp  vstzynayumi.hpp
src/dssi/: CMakeLists.txt
src/zynayumi/: CMakeLists.txt  PingPong.idr  engine.cpp  engine.hpp  factory.hpp  parameters.cpp  parameters.hpp  patch.cpp  patch.hpp  presets.cpp  presets.hpp  programs.cpp  programs.hpp  voice.cpp  voice.hpp  zynayumi.cpp  zynayumi.hpp
